miniextendr-macros/tests/ui/struct_list_syntax_rejected.stderr
error: unexpected list-style attribute; use path (`list`) or key-value (`class = "..."`) syntax
 --> tests/ui/struct_list_syntax_rejected.rs:5:15
  |
5 | #[miniextendr(list(nested = "bad"))]
  |               ^^^^^^^^^^^^^^^^^^^^
