miniextendr-macros/tests/ui/struct_list_syntax_rejected.rs
//! Test: Meta::List syntax on #[miniextendr] struct is rejected.

use miniextendr_macros::miniextendr;

#[miniextendr(list(nested = "bad"))]
struct MyStruct {
    x: i32,
    y: f64,
}

fn main() {}
